deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ride-managment
spec:
  replicas: 1
  template: 
    metadata:
      labels:
        app: ride-managment
    spec:
      containers:
      - name: ride-managment
        image: strixman/ride-managment-microservice:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            port: 80
            path: /health/liveness
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            port: 80
            path: /health/readiness
          initialDelaySeconds: 90
          periodSeconds: 60
          timeoutSeconds: 5
  selector:
    matchLabels:
      app: ride-managment
---
apiVersion: v1
kind: Service
metadata:
  name: ride-managment
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector: 
    app: ride-managment
